# linda

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
images/: diagram.drawio
scenarios/: ByeWriter.json  byeReader.json  byeReaderVip.json  helloVipReader.json  helloWriter.json  readerVIP.json  terminator.json
src/: main.cpp
src/Agent_lib/: CMakeLists.txt  LindaAgent.cpp  LindaAgent.h  main.cpp
src/Common_lib/: CMakeLists.txt  CommunicationService.cpp  CommunicationService.h  LindaTupleUtils.cpp  LindaTupleUtils.h  RandomUtils.cpp  RandomUtils.h  StringUtils.cpp  StringUtils.h
src/Common_lib/nlohmann/: json.hpp
src/Coordinator_lib/: CMakeLists.txt  LindaCoordinator.cpp  LindaCoordinator.h  main.cpp
src/Doctest_tests/: CMakeLists.txt  CommunicationServiceTest.cpp  LindaTupleUtilsTest.cpp  RandomUtilsTest.cpp  doctest.h
src/Linda_lib/: CMakeLists.txt  CommunicationService.cpp  CommunicationService.h  LindaAgent.cpp  LindaAgent.h  LindaService.cpp  LindaService.h  LindaTupleUtils.cpp  LindaTupleUtils.h
